--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# android
+android/**/build/
+android/.gradle/
+android/local.properties
+
+# ios
+ios/DerivedData/
+ios/Pods/
+ios/*.xcworkspace/xcuserdata/
+ios/**/xcuserdata/
+*.xcuserstate
