--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "mammoth": "^1.10.0",
     "next": "15.5.2",
     "pdf-parse": "^1.1.1",
@@ -20,6 +23,7 @@
     "together-ai": "^0.22.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
