add: capacitor for layout

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
+    "@capacitor/status-bar": "^7.0.3",
     "mammoth": "^1.10.0",
     "next": "15.5.2",
     "pdf-parse": "^1.1.1",
