mod: file download for app

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "^7.1.0",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/ios": "^7.4.3",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
     "mammoth": "^1.10.0",
     "next": "15.5.2",
